Initial population for dunfell-l4t-r32.4.3
1. Switch repos to relevant branches.
2. Update layer compatibility settings.
3. Update SDK GCC version in distro config.
4. Backport gpu-burn recipe from meta-tegra/contrib master.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -6,4 +6,4 @@ BBFILE_PATTERN_tegrasupport = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tegrasupport = "40"
 
 LAYERVERSION_tegrasupport = "4"
-LAYERSERIES_COMPAT_tegrasupport = "gatesgarth"
+LAYERSERIES_COMPAT_tegrasupport = "dunfell"
