--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -8,6 +8,8 @@ BBFILE_PRIORITY_tegrasupport = "40"
 BBFILES_DYNAMIC += "\
     mender:${LAYERDIR}/dynamic-layers/meta-mender-core/recipes*/*/*.bb \
     mender:${LAYERDIR}/dynamic-layers/meta-mender-core/recipes*/*/*.bbappend \
+    openembedded-layer:${LAYERDIR}/dynamic-layers/meta-oe/recipes*/*/*.bbappend \
+    meta-python:${LAYERDIR}/dynamic-layers/meta-python/recipes*/*/*.bbappend \
 "
 
 LAYERVERSION_tegrasupport = "4"
