--- a/.gitmodules
+++ b/.gitmodules
@@ -13,11 +13,11 @@
 [submodule "repos/meta-mender"]
 	path = repos/meta-mender
 	url = https://github.com/mendersoftware/meta-mender.git
-	branch = master-next
+	branch = dunfell
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
-	url = https://github.com/OE4T/meta-mender-community.git
-	branch = master-next
+	url = https://github.com/mendersoftware/meta-mender-community.git
+	branch = dunfell
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
