meta: add distro_layer_buildinfo.bbclass
which is needed for the version numbering scheme used in
the tegrademo-mender distro, and update the distro config file
to include it. Also adjust the BUILDNAME setting to remove
the '+snapshot' tag, since the build tag include the git hash
of the distro layer to identify the build.

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -8,10 +8,11 @@ DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot"
 
 ### Additions for mender ###
 
-INHERIT += "mender-full"
+INHERIT += "mender-full distro_layer_buildinfo"
 INHERIT_append_tegra = " tegra-mender-setup mender-workarounds"
+DISTRO_LAYER = "meta-tegrademo"
 
-BUILDNAME ?= "${DISTRO_VERSION}${DISTRO_LAYER_BUILDTAG}"
+BUILDNAME ?= "${@d.getVar('DISTRO_VERSION').replace('+snapshot','')}${DISTRO_LAYER_BUILDTAG}"
 BUILDNAME[vardepvalue] = "${DISTRO_VERSION}"
 
 MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
