meta-tegra-support: add LAYERDEPENDS
to note that the layer depends on meta-tegra and OE-Core.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -11,4 +11,5 @@ BBFILES_DYNAMIC += "\
 "
 
 LAYERVERSION_tegrasupport = "4"
+LAYERDEPENDS_tegrasupport = "core tegra"
 LAYERSERIES_COMPAT_tegrasupport = "gatesgarth"
