distro/tegrademo-mender.conf: set read-only-rootfs
and enable the rootfs-postcommands-overrides bbclass
when building images.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -19,6 +19,8 @@ MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
 
 IMAGE_FSTYPES_tegra = "tegraflash mender dataimg"
 IMAGE_FSTYPES_pn-tegra-minimal-initramfs_tegra = "${INITRAMFS_FSTYPES}"
+IMAGE_FEATURES_append = " read-only-rootfs"
+IMGCLASSES_append = " rootfs-postcommands-overrides"
 
 # Reserved space for tegraflash partitions, not including APP and DATA
 TEGRA_FLASH_PARTITIONS_MB ?= "950"
