distro/tegrademo-mender.conf: increase data partition size
The Deepstream 5.0 container downloadable from NGC needs
a lot of space, so increase the default size of the data
partition on tegra platforms to 3 GiB to accommodate it.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -25,6 +25,10 @@ IMGCLASSES_append = " rootfs-postcommands-overrides"
 # Reserved space for tegraflash partitions, not including APP and DATA
 TEGRA_FLASH_PARTITIONS_MB ?= "950"
 
+# Make more room for the data partition, so we can use it to hold
+# docker container filesystems.
+MENDER_DATA_PART_SIZE_MB_DEFAULT_tegra = "3072"
+
 MENDER_STORAGE_DEVICE_BASE ?= "/dev/mmcblk0p"
 MENDER_STORAGE_TOTAL_SIZE_MB ?= "${@tegra_mender_calc_total_size(d) - int(d.getVar('TEGRA_FLASH_PARTITIONS_MB'))}"
 
