scripts-setup: add create-distro-layer script
This script will enable user to make a metadata skeleton based on
tegrademo. They can use this skeleton to build their own layer.

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -62,7 +62,7 @@ SDKGCCVERSION = "9.%"
 # Most NVIDIA-supplied services expect systemd
 INIT_MANAGER = "systemd"
 
-INHERIT += "tegrademo-sanity"
+INHERIT += "tegra-support-sanity"
 #
 # OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
 # an incompatible way. Such changes should usually be detailed in the commit
