Fix comment line for NVIDIA_DEVNET_MIRROR
As discussed in https://github.com/OE4T/meta-tegra/issues/475#issuecomment-721873550

--- a/layers/meta-tegrademo/conf/template-tegrademo-mender/local.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo-mender/local.conf.sample
@@ -32,7 +32,7 @@ MACHINE ??= "qemux86-64"
 # be set to an accessible URL where you have downloaded the tools using
 # the NVIDIA SDK Manager.
 #@TD_SETUP_DEVNET_MIRROR@ - placeholder for automatic insertion by setup-env
-#NVIDIA_DEVNET_MIRROR ?= "${HOME}/Downloads/nvidia/sdkm_downloads"
+#NVIDIA_DEVNET_MIRROR ?= "file:///${HOME}/Downloads/nvidia/sdkm_downloads"
 
 #
 # Where to place downloads
