meta-tegra-support: add dynamic layer for meta-mender-tegra
to introduce some workarounds for issues that have not
yet been fixed upstream.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -8,6 +8,8 @@ BBFILE_PRIORITY_tegrasupport = "40"
 BBFILES_DYNAMIC += "\
     mender:${LAYERDIR}/dynamic-layers/meta-mender-core/recipes*/*/*.bb \
     mender:${LAYERDIR}/dynamic-layers/meta-mender-core/recipes*/*/*.bbappend \
+    meta-mender-tegra:${LAYERDIR}/dynamic-layers/meta-mender-tegra/recipes*/*/*.bb \
+    meta-mender-tegra:${LAYERDIR}/dynamic-layers/meta-mender-tegra/recipes*/*/*.bbappend \
     openembedded-layer:${LAYERDIR}/dynamic-layers/meta-oe/recipes*/*/*.bbappend \
     meta-python:${LAYERDIR}/dynamic-layers/meta-python/recipes*/*/*.bbappend \
 "
