tegrademo-mender: update bblayers with compatibility settings
* Bump the bblayers file version for automatic updating
* Add LAYERSERIES_COMPAT overrides for Mender layers

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -1,4 +1,5 @@
 include tegrademo.conf
+REQUIRED_TD_BBLAYERS_CONF_VERSION = "${DISTRO}-3"
 
 DISTRO = "tegrademo-mender"
 DISTRO_NAME = "OE4Tegra Demonstration Distro with Mender"
