--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "poky"]
 	path = repos/poky
 	url = git://git.yoctoproject.org/poky
-	branch = gatesgarth
+	branch = master
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
@@ -12,12 +12,12 @@
 	branch = master
 [submodule "repos/meta-mender"]
 	path = repos/meta-mender
-	url = https://github.com/madisongh/meta-mender.git
-	branch = master
+	url = https://github.com/mendersoftware/meta-mender.git
+	branch = dunfell
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
-	url = https://github.com/OE4T/meta-mender-community.git
-	branch = master-next
+	url = https://github.com/mendersoftware/meta-mender-community.git
+	branch = dunfell
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
