conf: update bblayers for tegrademo, tegrademo-mender
to add in the meta-demo-ci layer.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
@@ -1,7 +1,7 @@
 # Version of layers configuration, specific to
 # each defined distro in the repository.
 # Format: ${DISTRO}-<version>
-TD_BBLAYERS_CONF_VERSION = "tegrademo-2"
+TD_BBLAYERS_CONF_VERSION = "tegrademo-3"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -16,5 +16,6 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-filesystems \
   ##OEROOT##/meta-virtualization \
   ##OEROOT##/meta-tegra-support \
+  ##OEROOT##/meta-demo-ci \
   ##OEROOT##/meta-tegrademo \
   "
