distro/tegrademo-mender.conf: add overrides for Nano-2GB
- data partition number is now 17 due to the addition of
  the swap partition

- add the swap partition size to the variable that trackes
  reserved space on the sdcard

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -37,3 +37,9 @@ MENDER_STORAGE_TOTAL_SIZE_MB ?= "${@tegra_mender_calc_total_size(d) - int(d.getV
 SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 
 IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
+
+# Added a swap partition for the Nano 2GB dev kit, bumping the
+# data partition number.
+MENDER_DATA_PART_NUMBER_DEFAULT_jetson-nano-2gb-devkit = "17"
+# 5046 = 950 (default from above) plus 4096 for the swap partition
+TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
