--- a/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/capturetest.sh.in
+++ b/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/capturetest.sh.in
@@ -12,5 +12,5 @@ if readlink -f /sys/class/video4linux/video0 2>/dev/null | grep -q usb; then
 		   nvvidconv ! 'video/x-raw(memory:NVMM),format=(string)NV12' $TRANSFORM ! queue ! $VIDEOSINK
 else
     gst-launch-1.0 nvarguscamerasrc timeout=10 ! 'video/x-raw(memory:NVMM),width=640,height=480,format=(string)NV12,framerate=(fraction)30/1' ! \
-		   nvvidconv ! queue ! $VIDEOSINK
+		   nvvidconv $TRANSFORM ! queue ! $VIDEOSINK
 fi
