--- a/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/confvars.in
+++ b/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/confvars.in
@@ -4,9 +4,13 @@ if [ -n "$WAYLAND_DISPLAY" ]; then
     VIDEOSINK="nveglglessink winsys=wayland"
     IMAGESINK="waylandsink"
     TRANSFORM="! nvegltransform"
-else
+elif [ -n "$DISPLAY" ]; then
     VIDEOSINK="nv3dsink"
     IMAGESINK="xvimagesink"
+    TRANSFORM=""
+else
+    VIDEOSINK="nvdrmvideosink"
+    IMAGESINK="$VIDEOSINK"
     TRANSFORM=""
 fi
 AUDIOSINK="autoaudiosink"
