distro/tegrademo-mender.conf: overrides for Nano partition numbers
With R32.5.0, only the rootfs and data partitions reside on
the SDcard - all boot partitions are now in the QSPI flash.

Also add in the jetson-nano-2gb-devkit overrides.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -36,3 +36,11 @@ MENDER_STORAGE_TOTAL_SIZE_MB ?= "${@tegra_mender_calc_total_size(d) - int(d.getV
 SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 
 IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
+
+# 5046 = 950 (default from above) plus 4096 for the swap partition
+TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
+MENDER_DATA_PART_NUMBER_jetson-nano-devkit = "3"
+MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit = "2"
+# Swap is in partition 3 on the 2GB devkit
+MENDER_DATA_PART_NUMBER_jetson-nano-2gb-devkit = "4"
+MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
