distro/tegrademo-mender.conf: overrides for Nano partition numbers
With R32.5.0, only the rootfs and data partitions reside on
the SDcard - all boot partitions are now in the QSPI flash.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -38,8 +38,10 @@ SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 
 IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 
-# Added a swap partition for the Nano 2GB dev kit, bumping the
-# data partition number.
-MENDER_DATA_PART_NUMBER_DEFAULT_jetson-nano-2gb-devkit = "17"
 # 5046 = 950 (default from above) plus 4096 for the swap partition
 TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
+MENDER_DATA_PART_NUMBER_jetson-nano-devkit = "3"
+MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit = "2"
+# Swap is in partition 3 on the 2GB devkit
+MENDER_DATA_PART_NUMBER_jetson-nano-2gb-devkit = "4"
+MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
