distro/tegrademo-mender.conf: add BOOTENV_SIZE overrides
for the Nano devkits, since we've reduced the U-Boot
environment size to 32KiB.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -45,3 +45,6 @@ MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit = "2"
 # Swap is in partition 3 on the 2GB devkit
 MENDER_DATA_PART_NUMBER_jetson-nano-2gb-devkit = "4"
 MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
+# Overrides until meta-mender-tegra is updated
+BOOTENV_SIZE_jetson-nano-devkit = "0x8000"
+BOOTENV_SIZE_jetson-nano-2gb-devkit = "0x8000"
