distro/tegrademo.conf: update DISTRO_CODENAME
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -2,7 +2,7 @@ DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
 DISTRO_VERSION_BASE = "3.1"
 DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
-DISTRO_CODENAME = "master"
+DISTRO_CODENAME = "dunfell-l4t-r32.4.3"
 SDK_VENDOR = "-tdsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
