meta: rename machine jetson-nano-qspi-sd-cot to align with L4T R32.5.0.
Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-cot.conf
@@ -1,6 +1,6 @@
-MACHINEOVERRIDES = "jetson-nano-qspi-sd:cot:${MACHINE}"
-require conf/machine/jetson-nano-qspi-sd.conf
-PACKAGE_EXTRA_ARCHS_append = " jetson-nano-qspi-sd"
+MACHINEOVERRIDES = "jetson-nano-devkit:cot:${MACHINE}"
+require conf/machine/jetson-nano-devkit.conf
+PACKAGE_EXTRA_ARCHS_append = " jetson-nano-devkit"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
