meta: rename machine jetson-nano-emmc-cot to align with L4T R32.5.0.
Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-emmc-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-emmc-cot.conf
@@ -1,6 +1,6 @@
-MACHINEOVERRIDES = "jetson-nano-emmc:cot:${MACHINE}"
-require conf/machine/jetson-nano-emmc.conf
-PACKAGE_EXTRA_ARCHS_append = " jetson-nano-emmc"
+MACHINEOVERRIDES = "jetson-nano-devkit-emmc:cot:${MACHINE}"
+require conf/machine/jetson-nano-devkit-emmc.conf
+PACKAGE_EXTRA_ARCHS_append = " jetson-nano-devkit-emmc"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
