meta: rename mahcine jetson-tx2-cot to align with L4T R32.5.0.
Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
@@ -1,6 +1,6 @@
-MACHINEOVERRIDES = "jetson-tx2:cot:${MACHINE}"
-require conf/machine/jetson-tx2.conf
-PACKAGE_EXTRA_ARCHS_append = " jetson-tx2"
+MACHINEOVERRIDES = "jetson-tx2-devkit:cot:${MACHINE}"
+require conf/machine/jetson-tx2-devkit.conf
+PACKAGE_EXTRA_ARCHS_append = " jetson-tx2-devkit"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
