gstreamer-tests: update pipelines for R32.5.0 plugins
The NV plugins in R32.5.0 handle caps negotiation differently,
so adjust the test pipelines to accommodate. For sinteltest,
replace gst-play-1.0 with a pipeline, since the auto-negotiated
caps don't work in all cases.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/confvars.in
+++ b/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/confvars.in
@@ -7,10 +7,10 @@ if [ -n "$WAYLAND_DISPLAY" ]; then
 elif [ -n "$DISPLAY" ]; then
     VIDEOSINK="nv3dsink"
     IMAGESINK="xvimagesink"
-    TRANSFORM=""
+    TRANSFORM="! video/x-raw(memory:NVMM),format=(string)NV12"
 else
     VIDEOSINK="nvdrmvideosink"
     IMAGESINK="$VIDEOSINK"
-    TRANSFORM=""
+    TRANSFORM="! video/x-raw(memory:NVMM),format=(string)NV12"
 fi
 AUDIOSINK="autoaudiosink"
