--- a/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/sinteltest.sh.in
+++ b/layers/meta-tegra-support/recipes-test/tegra-tests/gstreamer-tests/sinteltest.sh.in
@@ -2,4 +2,6 @@
 
 . @DATADIR@/gstreamer-tests/confvars
 
-gst-play-1.0 --audiosink="$AUDIOSINK" --videosink="$VIDEOSINK" @DATADIR@/gstreamer-tests/sintel_trailer-1080p.mp4
+gst-launch-1.0 filesrc location=@DATADIR@/gstreamer-tests/sintel_trailer-1080p.mp4 ! qtdemux name=demux \
+	       demux.audio_0 ! queue ! faad ! $AUDIOSINK \
+	       demux.video_0 ! queue ! h264parse ! nvv4l2decoder $TRANSFORM ! $VIDEOSINK
