tegrademo-mender: Use cboot by default on TX2
Since uboot slot alignment issues are tricky, unless you know what
you are doing you probably want cboot as your bootloader for TX2/mender

See discussion at https://github.com/OE4T/meta-mender-community/pull/8#issuecomment-745564642

Signed-off-by: Dan Walkes <danwalkes@trellis-logic.com>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -43,3 +43,6 @@ IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 MENDER_DATA_PART_NUMBER_DEFAULT_jetson-nano-2gb-devkit = "17"
 # 5046 = 950 (default from above) plus 4096 for the swap partition
 TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
+
+# Use cboot by default on TX2 to avoid uboot slot alignment issues
+PREFERRED_PROVIDER_virtual/bootloader_tegra186 = "cboot-t18x"
