--- a/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
@@ -1,7 +1,7 @@
 # Version of layers configuration, specific to
 # each defined distro in the repository.
 # Format: ${DISTRO}-<version>
-TD_BBLAYERS_CONF_VERSION = "tegrademo-mender-4"
+TD_BBLAYERS_CONF_VERSION = "tegrademo-mender-5"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -23,5 +23,5 @@ BBLAYERS ?= " \
   "
 
 # XXX temporary, until Mender supports gatesgarth
-LAYERSERIES_COMPAT_mender_append = " gatesgarth"
-LAYERSERIES_COMPAT_meta-mender-tegra_append = " gatesgarth"
+LAYERSERIES_COMPAT_mender_append = " hardknott"
+LAYERSERIES_COMPAT_meta-mender-tegra_append = " hardknott"
