--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
@@ -4,6 +4,8 @@ PACKAGE_EXTRA_ARCHS_append = " jetson-tx2-devkit"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS_append = " tegra-fitimage"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-tegra"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
@@ -13,3 +15,4 @@ UBOOT_DTBO_LOADADDRESS = "0x80000000"
 UBOOT_RD_LOADADDRESS = "0x82a00000"
 UBOOT_RD_ENTRYPOINT = "0x82a00000"
 FIT_INCLUDE_DTBS = "0"
+FIT_KERNEL_COMP_ALG = "none"
