machine: set u-boot-tegra as preferable bootloader.
Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-cot.conf
@@ -4,6 +4,7 @@ PACKAGE_EXTRA_ARCHS_append = " jetson-tx2"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-tegra"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
