distro/tegrademo.conf: use custom boot logo
With the addition of custom boot logo support in
meta-tegra, we can switch the OE4T demo distros
over to use our logo.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -76,3 +76,5 @@ BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_WHITELIST += "commercial_faad2"
+
+PREFERRED_PROVIDER_virtual/bootlogo_tegra = "bootlogo-custom"
