--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -1,8 +1,8 @@
 DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
-DISTRO_VERSION_BASE = "3.2"
+DISTRO_VERSION_BASE = "3.3"
 DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
-DISTRO_CODENAME = "master"
+DISTRO_CODENAME = "hardknott"
 SDK_VENDOR = "-tdsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
