--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -54,6 +54,7 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
             ubuntu-20.10 \n \
+            ubuntu-21.04 \n \
             "
 
 # CUDA 10.2 requires gcc 7 or 8
