--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -41,6 +41,8 @@ IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
 MENDER_DATA_PART_NUMBER_jetson-nano-devkit = "3"
 MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit = "2"
+MENDER_DATA_PART_NUMBER_jetson-nano-devkit-emmc = "19"
+MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit-emmc = "18"
 # Swap is in partition 3 on the 2GB devkit
 MENDER_DATA_PART_NUMBER_jetson-nano-2gb-devkit = "4"
 MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
