machine: update the machines (-cot) to install only FIT image in the rootfs
disallow installation of the kernel device tree and other kernel image e.g. Image

Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
@@ -3,9 +3,9 @@ require conf/machine/jetson-tx2-devkit.conf
 PACKAGE_EXTRA_ARCHS_append = " jetson-tx2-devkit"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image u-boot-extlinux"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_append = " tegra-fitimage"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-tegra"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image kernel-devicetree"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
