--- a/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-emmc-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-nano-devkit-emmc-cot.conf
@@ -3,8 +3,9 @@ require conf/machine/jetson-nano-devkit-emmc.conf
 PACKAGE_EXTRA_ARCHS_append = " jetson-nano-devkit-emmc"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image u-boot-extlinux"
 TEGRA_ESSENTIAL_EXTRA_RDEPENDS_append = " tegra-fitimage"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image kernel-devicetree"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
