--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -49,3 +49,6 @@ MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
 
 # Use cboot by default on TX2 to avoid uboot slot alignment issues
 PREFERRED_PROVIDER_virtual/bootloader_tegra186 = "cboot-t18x"
+
+# Use u-boot by default on the TX2 COT when using the FIT image
+PREFERRED_PROVIDER_virtual/bootloader_jetson-tx2-devkit-cot = "u-boot-tegra"
