distro/tegrademo-mender: fix BUP generation issue when using jetson-tx2-cot machine with mender
Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -46,3 +46,6 @@ TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
 
 # Use cboot by default on TX2 to avoid uboot slot alignment issues
 PREFERRED_PROVIDER_virtual/bootloader_tegra186 = "cboot-t18x"
+
+# Use u-boot by default on the TX2 COT when using the FIT image
+PREFERRED_PROVIDER_virtual/bootloader_jetson-tx2-cot = "u-boot-tegra"
