machine: update the machines (-cot) to install only FIT image into the rootfs.
disallow installation of the kernel device tree and other kernel image
e.g. Image.

Signed-off-by: Ilies CHERGUI <ilies.chergui@gmail.com>

--- a/layers/meta-tegrademo/conf/machine/jetson-nano-emmc-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-nano-emmc-cot.conf
@@ -3,7 +3,8 @@ require conf/machine/jetson-nano-emmc.conf
 PACKAGE_EXTRA_ARCHS_append = " jetson-nano-emmc"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image u-boot-extlinux"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image kernel-devicetree"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
