--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-cot.conf
@@ -3,8 +3,8 @@ require conf/machine/jetson-tx2.conf
 PACKAGE_EXTRA_ARCHS_append = " jetson-tx2"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "u-boot-extlinux"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-tegra"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image u-boot-extlinux"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image kernel-devicetree"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
