--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -39,3 +39,6 @@ IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 
 # Use cboot by default on TX2 to avoid uboot slot alignment issues
 PREFERRED_PROVIDER_virtual/bootloader_tegra186 = "cboot-t18x"
+
+# Use u-boot by default on the TX2 COT when using the FIT image
+PREFERRED_PROVIDER_virtual/bootloader_jetson-tx2-cot = "u-boot-tegra"
