--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -16,4 +16,4 @@ BBFILES_DYNAMIC += "\
 
 LAYERVERSION_tegrasupport = "4"
 LAYERDEPENDS_tegrasupport = "core tegra"
-LAYERSERIES_COMPAT_tegrasupport = "gatesgarth hardknott"
+LAYERSERIES_COMPAT_tegrasupport = "honister"
