meta-tegra-support: update vpi1-samples to 1.1.11
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegra-support/recipes-devtools/vpi/vpi1-samples/CMakeLists.txt
+++ b/layers/meta-tegra-support/recipes-devtools/vpi/vpi1-samples/CMakeLists.txt
@@ -1,7 +1,7 @@
 option(BUILD_VIDEO_SAMPLES "Build video samples requiring ffmpeg" OFF)
-set(SUBDIRS 01-convolve_2d 02-stereo_disparity 03-harris_corners 04-rescale 05-timing 07-fft 11-fisheye)
+set(SUBDIRS 01-convolve_2d 02-stereo_disparity 03-harris_corners 04-rescale 05-benchmark 07-fft 11-fisheye)
 if(BUILD_VIDEO_SAMPLES)
-  list(APPEND SUBDIRS 06-klt_tracker 09-tnr 10-perspwarp 12-optflow_lk)
+  list(APPEND SUBDIRS 06-klt_tracker 09-tnr 10-perspwarp 12-optflow_lk 13-optflow_dense 14-background_subtractor)
 endif()
 
 foreach(subdir ${SUBDIRS})
