meta: update with new overrides syntax
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -10,7 +10,7 @@ DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot"
 ### Additions for mender ###
 
 INHERIT += "mender-full distro_layer_buildinfo"
-INHERIT_append_tegra = " tegra-mender-setup mender-workarounds"
+INHERIT:append:tegra = " tegra-mender-setup mender-workarounds"
 DISTRO_LAYER = "meta-tegrademo"
 
 BUILDNAME ?= "${@d.getVar('DISTRO_VERSION').replace('+snapshot','')}${DISTRO_LAYER_BUILDTAG}"
@@ -19,9 +19,9 @@ BUILDNAME[vardepvalue] = "${DISTRO_VERSION}"
 MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
 
 IMAGE_FSTYPES_tegra = "tegraflash mender dataimg"
-IMAGE_FSTYPES_pn-tegra-minimal-initramfs_tegra = "${INITRAMFS_FSTYPES}"
-IMAGE_FEATURES_append = " read-only-rootfs"
-IMGCLASSES_append = " rootfs-postcommands-overrides"
+IMAGE_FSTYPES:pn-tegra-minimal-initramfs_tegra = "${INITRAMFS_FSTYPES}"
+IMAGE_FEATURES:append = " read-only-rootfs"
+IMGCLASSES:append = " rootfs-postcommands-overrides"
 
 # Reserved space for tegraflash partitions, not including APP and DATA
 TEGRA_FLASH_PARTITIONS_MB ?= "950"
@@ -36,7 +36,7 @@ MENDER_STORAGE_TOTAL_SIZE_MB ?= "${@tegra_mender_calc_total_size(d) - int(d.getV
 # Mender machines need to run checks after an update
 SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 
-IMAGE_INSTALL_append_tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
+IMAGE_INSTALL:append:tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 
 # 5046 = 950 (default from above) plus 4096 for the swap partition
 TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
