--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -58,7 +58,7 @@ SANITY_TESTED_DISTROS ?= " \
             "
 
 # CUDA 10.2 requires gcc 7 or 8
-GCCVERSION_aarch64 = "8.%"
+GCCVERSION:aarch64 = "8.%"
 SDKGCCVERSION = "11.%"
 
 # Most NVIDIA-supplied services expect systemd
