--- a/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
+++ b/layers/meta-tegrademo/conf/machine/jetson-tx2-devkit-cot.conf
@@ -1,11 +1,11 @@
 MACHINEOVERRIDES = "jetson-tx2-devkit:cot:${MACHINE}"
 require conf/machine/jetson-tx2-devkit.conf
-PACKAGE_EXTRA_ARCHS_append = " jetson-tx2-devkit"
+PACKAGE_EXTRA_ARCHS:append = " jetson-tx2-devkit"
 KERNEL_CLASSES += "tegra-kernel-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image u-boot-extlinux"
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS_append = " tegra-fitimage"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_remove = "kernel-image kernel-devicetree"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS:remove = "kernel-image u-boot-extlinux"
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS:append = " tegra-fitimage"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS:remove = "kernel-image kernel-devicetree"
 INITRAMFS_IMAGE_BUNDLE = "1"
 UBOOT_EXTLINUX = "0"
 UBOOT_ENTRYPOINT = "0x80080000"
