meta: more overrides conversion fixups
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -18,8 +18,8 @@ BUILDNAME[vardepvalue] = "${DISTRO_VERSION}"
 
 MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
 
-IMAGE_FSTYPES_tegra = "tegraflash mender dataimg"
-IMAGE_FSTYPES:pn-tegra-minimal-initramfs_tegra = "${INITRAMFS_FSTYPES}"
+IMAGE_FSTYPES:tegra = "tegraflash mender dataimg"
+IMAGE_FSTYPES:pn-tegra-minimal-initramfs:tegra = "${INITRAMFS_FSTYPES}"
 IMAGE_FEATURES:append = " read-only-rootfs"
 IMGCLASSES:append = " rootfs-postcommands-overrides"
 
@@ -28,7 +28,7 @@ TEGRA_FLASH_PARTITIONS_MB ?= "950"
 
 # Make more room for the data partition, so we can use it to hold
 # docker container filesystems.
-MENDER_DATA_PART_SIZE_MB_DEFAULT_tegra = "3072"
+MENDER_DATA_PART_SIZE_MB_DEFAULT:tegra = "3072"
 
 MENDER_STORAGE_DEVICE_BASE ?= "/dev/mmcblk0p"
 MENDER_STORAGE_TOTAL_SIZE_MB ?= "${@tegra_mender_calc_total_size(d) - int(d.getVar('TEGRA_FLASH_PARTITIONS_MB'))}"
@@ -39,20 +39,20 @@ SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 IMAGE_INSTALL:append:tegra = " tegra-eeprom-tool i2c-tools tegra-bup-payload"
 
 # 5046 = 950 (default from above) plus 4096 for the swap partition
-TEGRA_FLASH_PARTITIONS_MB_jetson-nano-2gb-devkit = "5046"
-MENDER_DATA_PART_NUMBER_jetson-nano-devkit = "3"
-MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit = "2"
-MENDER_DATA_PART_NUMBER_jetson-nano-devkit-emmc = "19"
-MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-devkit-emmc = "18"
+TEGRA_FLASH_PARTITIONS_MB:jetson-nano-2gb-devkit = "5046"
+MENDER_DATA_PART_NUMBER:jetson-nano-devkit = "3"
+MENDER_ROOTFS_PART_B_NUMBER:jetson-nano-devkit = "2"
+MENDER_DATA_PART_NUMBER:jetson-nano-devkit-emmc = "19"
+MENDER_ROOTFS_PART_B_NUMBER:jetson-nano-devkit-emmc = "18"
 # Swap is in partition 3 on the 2GB devkit
-MENDER_DATA_PART_NUMBER_jetson-nano-2gb-devkit = "4"
-MENDER_ROOTFS_PART_B_NUMBER_jetson-nano-2gb-devkit = "2"
+MENDER_DATA_PART_NUMBER:jetson-nano-2gb-devkit = "4"
+MENDER_ROOTFS_PART_B_NUMBER:jetson-nano-2gb-devkit = "2"
 # Overrides until meta-mender-tegra is updated
-BOOTENV_SIZE_jetson-nano-devkit = "0x8000"
-BOOTENV_SIZE_jetson-nano-2gb-devkit = "0x8000"
+BOOTENV_SIZE:jetson-nano-devkit = "0x8000"
+BOOTENV_SIZE:jetson-nano-2gb-devkit = "0x8000"
 
 # Use cboot by default on TX2 to avoid uboot slot alignment issues
-PREFERRED_PROVIDER_virtual/bootloader_tegra186 = "cboot-t18x"
+PREFERRED_PROVIDER_virtual/bootloader:tegra186 = "cboot-t18x"
 
 # Use u-boot by default on the TX2 COT when using the FIT image
-PREFERRED_PROVIDER_virtual/bootloader_jetson-tx2-devkit-cot = "u-boot-tegra"
+PREFERRED_PROVIDER_virtual/bootloader:jetson-tx2-devkit-cot = "u-boot-tegra"
