repos: update poky, tegra, oe, virt
and switch meta-virtualization back to upstream,
which has been updated for the new overrides syntax.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,8 +8,8 @@
 	branch = master
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
-	url = https://gitlab.com/OE4T/meta-virtualization.git
-	branch = temp-overrides-conversion
+	url = git://git.yoctoproject.org/meta-virtualization
+	branch = master
 [submodule "repos/meta-mender"]
 	path = repos/meta-mender
 	url = https://github.com/madisongh/meta-mender.git
