--- a/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
@@ -1,7 +1,7 @@
 # Version of layers configuration, specific to
 # each defined distro in the repository.
 # Format: ${DISTRO}-<version>
-TD_BBLAYERS_CONF_VERSION = "tegrademo-3"
+TD_BBLAYERS_CONF_VERSION = "tegrademo-4"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -15,6 +15,7 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-networking \
   ##OEROOT##/meta-filesystems \
   ##OEROOT##/meta-virtualization \
+  ##OEROOT##/meta-tegra-community \
   ##OEROOT##/meta-tegra-support \
   ##OEROOT##/meta-demo-ci \
   ##OEROOT##/meta-tegrademo \
