--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
 	branch = hardknott
+[submodule "layers/meta-tegra-support/repos/meta-tegra-community"]
+	path = repos/meta-tegra-community
+	url = https://github.com/OE4T/meta-tegra-community.git
+	branch = hardknott
