--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "poky"]
 	path = repos/poky
 	url = git://git.yoctoproject.org/poky
-	branch = master
+	branch = honister
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
-	branch = master
+	branch = honister
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
 	url = git://git.yoctoproject.org/meta-virtualization
-	branch = master
+	branch = honister
 [submodule "repos/meta-mender"]
 	path = repos/meta-mender
 	url = https://github.com/madisongh/meta-mender.git
@@ -21,8 +21,8 @@
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
-	branch = master
+	branch = honister
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
 	url = https://github.com/OE4T/meta-tegra-community
-	branch = master
+	branch = honister
