tegrademo.conf: remove sanity bbclass from eSDK config
The eSDK creator runs bitbake and the bblayers sanity
check we have in tegra-support-sanity.bbclass will incorrectly
overwrite the bblayers.conf file for the eSDK, so just
disable it.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -65,6 +65,7 @@ SDKGCCVERSION = "11.%"
 INIT_MANAGER = "systemd"
 
 INHERIT += "tegra-support-sanity"
+SDK_INHERIT_BLACKLIST:append = " tegra-support-sanity"
 
 require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
