--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -60,6 +60,8 @@ SANITY_TESTED_DISTROS ?= " \
 # CUDA 10.2 requires gcc 7 or 8
 GCCVERSION:aarch64 = "8.%"
 SDKGCCVERSION = "11.%"
+# later versions of vte require a later toolchain
+PREFERRED_VERSION_vte:aarch64 = "0.64%"
 
 # Most NVIDIA-supplied services expect systemd
 INIT_MANAGER = "systemd"
