distro/tegrademo.conf: update custom bootlogo setting
which got missed in the conversion to the new
override syntax.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -79,4 +79,4 @@ BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_WHITELIST += "commercial_faad2"
 
-PREFERRED_PROVIDER_virtual/bootlogo_tegra = "bootlogo-custom"
+PREFERRED_PROVIDER_virtual/bootlogo:tegra = "bootlogo-custom"
