distro/tegrademo-mender.conf: update reserved storage settings
Ensure bootloader update compatibility with older revisions
by reserving an additional 950MB of space above the default
provided in meta-mender-tegra.

Without this, upgrading from an older tegrademo-mender build
would result in a boot failure due to bootloader partition
offsets being different from earlier builds.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -26,6 +26,12 @@ IMGCLASSES_append = " rootfs-postcommands-overrides"
 # docker container filesystems.
 MENDER_DATA_PART_SIZE_MB_DEFAULT_tegra = "3072"
 
+# Account for the additional 950MB we used to reserve via a separate
+# variable, on top of the default 1024MB.  On Nano-2gb, it was 5046MB
+# to cover the addition of the swap partition.
+TEGRA_MENDER_RESERVED_SPACE_MB = "1974"
+TEGRA_MENDER_RESERVED_SPACE_MB_jetson-nano-2gb-devkit = "6070"
+
 # Mender machines need to run checks after an update
 SYSTEMD_DEFAULT_TARGET = "finished-booting.target"
 
