distro/tegrademo.conf: drop toolchain version change
which is no longer required.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -57,11 +57,8 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-21.10 \n \
             "
 
-# CUDA 10.2 requires gcc 7 or 8
-GCCVERSION:aarch64 = "8.%"
-SDKGCCVERSION = "11.%"
-# later versions of vte require a later toolchain
-PREFERRED_VERSION_vte:aarch64 = "0.64%"
+# CUDA 10.2 requires gcc 8
+CUDA_GCCVERSION = "8.%"
 
 # Most NVIDIA-supplied services expect systemd
 INIT_MANAGER = "systemd"
