meta: add workaround for crate fetcher issue
meta-openembedded now has Rust recipes that need the
crate fetcher, so the previous workaround of just
nullifying crate-fetch.bbclass isn't good enough.

Importing the crate fetcher via OE_IMPORTS will
fix the problem without causing setscene failures.

https://bugzilla.yoctoproject.org/show_bug.cgi?id=14680

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -77,3 +77,6 @@ BB_HASHSERVE ??= "auto"
 LICENSE_FLAGS_WHITELIST += "commercial_faad2"
 
 PREFERRED_PROVIDER_virtual/bootlogo:tegra = "bootlogo-custom"
+# Workaround for
+# https://bugzilla.yoctoproject.org/show_bug.cgi?id=14680
+OE_IMPORTS += "import_crate_fetcher"
