conf: update distro config and config templates
* Align with recent poky.conf changes
* Bump bblayers version for tegrademo-mender due to
  LAYERSERIES_COMPAT update

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -16,7 +16,7 @@ TARGET_VENDOR = "-oe4t"
 # each time the layer settings are changed.
 REQUIRED_TD_BBLAYERS_CONF_VERSION = "${DISTRO}-4"
 
-LOCALCONF_VERSION = "1"
+LOCALCONF_VERSION = "2"
 
 DISTRO_VERSION[vardepsexclude] = "DATE"
 SDK_VERSION[vardepsexclude] = "DATE"
@@ -27,8 +27,8 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${TD_DEFAULT_DISTRO_FEATURES}"
 
 # Jetson platforms do not use linux-yocto, but for QEMU testing
 # align with the poky distro.
-PREFERRED_VERSION_linux-yocto ?= "5.14%"
-PREFERRED_VERSION_linux-yocto-rt ?= "5.14%"
+PREFERRED_VERSION_linux-yocto ?= "5.15%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
 
 # Gstreamer libraries are passed through to containers when using
 # nvidia-docker, so our version of Gstreamer must match the one in
@@ -41,14 +41,14 @@ SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 TCLIBCAPPEND = ""
 
 PREMIRRORS ??= "\
-bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \n \
-hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
-osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
-svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
+bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
+cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
+git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
+gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \
+hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
+osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
+p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
+svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/"
 
 SANITY_TESTED_DISTROS ?= " \
             ubuntu-18.04 \n \
