meta: remove honister from LAYERSERIES_COMPAT
in all layers.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
@@ -24,5 +24,5 @@ BBLAYERS ?= " \
   "
 
 # XXX temporary, until Mender supports something newer
-LAYERSERIES_COMPAT_mender:append = " honister kirkstone"
-LAYERSERIES_COMPAT_meta-mender-tegra:append = " honister kirkstone"
+LAYERSERIES_COMPAT_mender:append = " kirkstone"
+LAYERSERIES_COMPAT_meta-mender-tegra:append = " kirkstone"
