--- a/layers/meta-demo-ci/conf/layer.conf
+++ b/layers/meta-demo-ci/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_PRIORITY_tegrademo-ci = "40"
 
 LAYERVERSION_tegrademo-ci = "1"
 LAYERDEPENDS_tegrademo-ci = "core"
-LAYERSERIES_COMPAT_tegrademo-ci = "honister kirkstone"
+LAYERSERIES_COMPAT_tegrademo-ci = "kirkstone"
