meta: update variables renamed in OE-Core
and include a bit more cleanup in the local.conf.sample
templates to align with upstream and update the list
of suppoted MACHINEs.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -64,7 +64,7 @@ CUDA_GCCVERSION = "8.%"
 INIT_MANAGER = "systemd"
 
 INHERIT += "tegra-support-sanity"
-SDK_INHERIT_BLACKLIST:append = " tegra-support-sanity"
+ESDK_CLASS_INHERIT_DISABLE:append = " tegra-support-sanity"
 
 require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
@@ -74,6 +74,6 @@ INHERIT += "uninative"
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
-LICENSE_FLAGS_WHITELIST += "commercial_faad2"
+LICENSE_FLAGS_ACCEPTED += "commercial_faad2"
 
 PREFERRED_PROVIDER_virtual/bootlogo:tegra = "bootlogo-custom"
