--- a/layers/meta-tegrademo/conf/template-tegrademo-mender/local.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo-mender/local.conf.sample
@@ -1,4 +1,4 @@
-## This file is your local configuration file and is where all local user settings
+# This file is your local configuration file and is where all local user settings
 # are placed. The comments in this file give some guide to the options a new user
 # to the system might want to change but pretty much any configuration option can
 # be set in this file.
@@ -16,10 +16,10 @@
 #MACHINE ?= "jetson-tx2-devkit-4gb"
 #MACHINE ?= "jetson-tx2-devkit"
 #MACHINE ?= "jetson-devkit-tx2i"
-#MACHINE ?= "jetson-agx-xavier-devkit-8gb"
 #MACHINE ?= "jetson-agx-xavier-devkit"
 #MACHINE ?= "jetson-xavier-nx-devkit"
 #MACHINE ?= "jetson-xavier-nx-devkit-emmc"
+#MACHINE ?= "jetson-xavier-nx-devkit-tx2-nx"
 #@TD_SETUP_MACHINE@ - placeholder for automatic insertion by setup-env
 #
 # This sets the default machine to be qemux86-64 if no other machine is selected:
@@ -27,11 +27,8 @@ MACHINE ??= "qemux86-64"
 
 # Where to find NVIDIA binary packages
 #
-# The CUDA host-side tools are only available through a URL that requires
-# authentication with an NVIDIA Developer Network login, and so cannot be
-# fetched directly by Bitbake. The NVIDIA_DEVNET MIRROR variable should
-# be set to an accessible URL where you have downloaded the tools using
-# the NVIDIA SDK Manager.
+# For use when recipes require packages that can only be downloaded
+# with an NVIDIA Developer Network login.
 #@TD_SETUP_DEVNET_MIRROR@ - placeholder for automatic insertion by setup-env
 #NVIDIA_DEVNET_MIRROR ?= "file:///${HOME}/Downloads/nvidia/sdkm_downloads"
 
@@ -178,25 +175,25 @@ PATCHRESOLVE = "noop"
 #
 # Monitor the disk space during the build. If there is less than 1GB of space or less
 # than 100K inodes in any key build location (TMPDIR, DL_DIR, SSTATE_DIR), gracefully
-# shutdown the build. If there is less than 100MB or 1K inodes, perform a hard abort
+# shutdown the build. If there is less than 100MB or 1K inodes, perform a hard halt
 # of the build. The reason for this is that running completely out of space can corrupt
 # files and damages the build in ways which may not be easily recoverable.
-# It's necesary to monitor /tmp, if there is no space left the build will fail
+# It's necessary to monitor /tmp, if there is no space left the build will fail
 # with very exotic errors.
 BB_DISKMON_DIRS ??= "\
     STOPTASKS,${TMPDIR},1G,100K \
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
     STOPTASKS,/tmp,100M,100K \
-    ABORT,${TMPDIR},100M,1K \
-    ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K \
-    ABORT,/tmp,10M,1K"
+    HALT,${TMPDIR},100M,1K \
+    HALT,${DL_DIR},100M,1K \
+    HALT,${SSTATE_DIR},100M,1K \
+    HALT,/tmp,10M,1K"
 
 #
 # Shared-state files from other locations
 #
-# As mentioned above, shared state files are prebuilt cache data objects which can
+# As mentioned above, shared state files are prebuilt cache data objects which can be
 # used to accelerate build time. This variable can be used to configure the system
 # to search other mirror locations for these objects before it builds the data itself.
 #
@@ -215,14 +212,15 @@ BB_DISKMON_DIRS ??= "\
 # Yocto Project SState Mirror
 #
 # The Yocto Project has prebuilt artefacts available for its releases, you can enable
-# use of these by uncommenting the following line. This will mean the build uses
+# use of these by uncommenting the following lines. This will mean the build uses
 # the network to check for artefacts at the start of builds, which does slow it down
 # equally, it will also speed up the builds by not having to build things if they are
 # present in the cache. It assumes you can download something faster than you can build it
 # which will depend on your network.
+# Note: For this to work you also need hash-equivalence passthrough to the matching server
 #
-#SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/3.4/PATH;downloadfilename=PATH"
 #BB_HASHSERVE_UPSTREAM = "typhoon.yocto.io:8687"
+#SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/3.4/PATH;downloadfilename=PATH"
 
 #
 # Qemu configuration
@@ -236,7 +234,7 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 
 # You can also enable the Gtk UI frontend, which takes somewhat longer to build, but adds
 # a handy set of menus for controlling the emulator.
-#PACKAGECONFIG_append_pn-qemu-system-native = " gtk+"
+#PACKAGECONFIG:append:pn-qemu-system-native = " gtk+"
 
 #
 # Hash Equivalence
