distro/tegrademo.conf: update for JetPack 5 DP
- drop gstreamer 1.14 use
- update version/codename

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -1,8 +1,8 @@
 DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
-DISTRO_VERSION_BASE = "4.0"
+DISTRO_VERSION_BASE = "4.0-JP5-DP"
 DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
-DISTRO_CODENAME = "master"
+DISTRO_CODENAME = "jetpack-5-dp"
 SDK_VENDOR = "-tdsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
@@ -29,11 +29,6 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${TD_DEFAULT_DISTRO_FEATURES}"
 # align with the poky distro.
 PREFERRED_VERSION_linux-yocto ?= "5.15%"
 PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
-
-# Gstreamer libraries are passed through to containers when using
-# nvidia-docker, so our version of Gstreamer must match the one in
-# the stock L4T/JetPack release.
-require conf/include/gstreamer-1.14.conf
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
