--- a/.gitmodules
+++ b/.gitmodules
@@ -21,8 +21,8 @@
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
-	branch = dunfell
+	branch = dunfell-l4t-r32.6.1
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
 	url = https://github.com/OE4T/meta-tegra-community.git
-	branch = dunfell
+	branch = dunfell-l4t-r32.6.1
