--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
-	branch = master
+	branch = kirkstone
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
 	url = git://git.yoctoproject.org/meta-virtualization
