--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -1,6 +1,6 @@
 DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
-DISTRO_VERSION_BASE = "4.0"
+DISTRO_VERSION_BASE = "4.1"
 DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
 DISTRO_CODENAME = "master"
 SDK_VENDOR = "-tdsdk"
@@ -39,6 +39,8 @@ SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
 TCLIBCAPPEND = ""
+
+PACKAGE_CLASSES ?= "package_rpm"
 
 PREMIRRORS ??= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
