repos: switch mender-community back to upstream
The kirkstone-next branch in meta-mender-community
now has the latest from our local fork for the
tegra platforms.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,8 +16,8 @@
 	branch = dunfell-kirkstone-compat
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
-	url = https://github.com/OE4T/meta-mender-community.git
-	branch = dunfell-with-overrides-conversion
+	url = https://github.com/mendersoftware/meta-mender-community.git
+	branch = kirkstone-next
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
