--- a/.gitmodules
+++ b/.gitmodules
@@ -16,12 +16,12 @@
 	branch = dunfell-kirkstone-compat
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
-	url = https://github.com/mendersoftware/meta-mender-community.git
-	branch = kirkstone-next
+	url = https://github.com/OE4T/meta-mender-community.git
+	branch = kirkstone-next-r32.7.2
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
-	branch = master
+	branch = wip-l4t-r32.7.2
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
 	url = https://github.com/OE4T/meta-tegra-community
