repos: switch to wip-jetpack-5-ga branch in tegra, tegra-community
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,8 +21,8 @@
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
-	branch = master
+	branch = wip-jetpack-5-ga
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
 	url = https://github.com/OE4T/meta-tegra-community
-	branch = master
+	branch = wip-jetpack-5-ga
